# MAI_OOP

./: README.md
5lab/: CMakeLists.txt  run.cpp
5lab/include/: allocator.hpp  stack.hpp
5lab/src/: allocator.cpp  stack.cpp
5lab/tests/: tests.cpp
6lab/: CMakeLists.txt  run.cpp
6lab/include/: NPC.hpp  bear.hpp  elf.hpp  factory.hpp  observer.hpp  thug.hpp
6lab/src/: NPC.cpp  bear.cpp  elf.cpp  factory.cpp  observer.cpp  thug.cpp
6lab/tests/: tests.cpp
7lab/: CMakeLists.txt  Makefile  run.cpp
7lab/include/: bear.hpp  elf.hpp  npc.hpp  thug.hpp
7lab/src/: bear.cpp  elf.cpp  npc.cpp  thug.cpp
7lab/tests/: tests.cpp
first_lab/: CMakeLists.txt  README.md  run.cpp
first_lab/include/: task.hpp
first_lab/src/: task.cpp
first_lab/tests/: tests.cpp
second_lab/: CMakeLists.txt  Makefile  README.md  run.cpp
second_lab/include/: money.hpp
second_lab/src/: money.cpp
second_lab/tests/: tests.cpp
third_lab/: CMakeLists.txt  Makefile  README.md  run.cpp
third_lab/include/containers/: FiguresVector.hpp  vector.hpp
third_lab/include/figures/: Point.hpp  Rectangle.hpp  Square.hpp  Trapeze.hpp
third_lab/include/interfaces/: figure.hpp
third_lab/src/containers/: FiguresVector.cpp  vector.cpp
third_lab/src/figures/: Point.cpp  Rectangle.cpp  Square.cpp  Trapeze.cpp
third_lab/tests/: Point_tests.cpp  Square_tests.cpp  Trapeze_tests.cpp  Vector_tests.cpp  rectangle_tests.cpp
